<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/finestWhite"
    >

  <RelativeLayout
      xmlns:android="http://schemas.android.com/apk/res/android"
      android:id="@+id/header"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="#FC9"
      android:gravity="center"
      >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/paediatrics_protocols_kenya"
        android:textColor="#000"
        android:textSize="22sp" />

  </RelativeLayout>

  <Button
      android:id="@+id/defaultTheme"
      android:layout_width="match_parent"
      android:layout_height="64dp"
      android:background="@color/finestWhite"
      android:onClick="onClick"
      android:text="@string/terms_and_condtions"
      android:textColor="@color/finestBlack"
      />

  <Button
      android:id="@+id/redTheme"
      android:layout_width="match_parent"
      android:layout_height="64dp"
      android:background="@color/redPrimary"
      android:onClick="onClick"
      android:text="@string/about"
      android:textColor="@color/finestWhite"
      />

</LinearLayout>