<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:background="@color/finestWhite"
    tools:context=".ShockActivity">

    <LinearLayout
        android:id="@+id/layoer72"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="11dp"
        android:layout_marginEnd="11dp">

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FC9"
            android:gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/paediatrics_protocols_kenya"
                android:textColor="#000"
                android:textSize="15sp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/textDrug"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="#fff"
            android:text="@string/fluid_management_diarrhoea"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="20sp" />



    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoer2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:weightSum="100"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editText1"
            android:hint="@string/enter_weight"
            android:background="@drawable/bg_edittext"
            android:textColor="@android:color/black"
            android:layout_width="fill_parent"
            android:textAlignment="center"
            android:layout_margin="10sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal"
            tools:ignore="InefficientWeight">

            <requestFocus />
        </EditText>
        <!--    <EditText -->
        <!--         android:id="@+id/editText2" -->
        <!--         android:layout_width="100dp" -->
        <!--         android:layout_height="wrap_content" -->
        <!--         android:layout_weight="1" -->
        <!--         android:hint="Age" -->
        <!--         android:ems="10" -->
        <!--         android:inputType="number" > -->

        <!--     </EditText> -->

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoer3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoer2"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/layoer1"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:orientation="vertical"
            android:weightSum="100"
            >

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/calculate"
                android:textColor="@color/text_color_primary_3"
                android:backgroundTint="@color/holo_blue_dark"
                android:background="@color/holo_blue_dark"
                tools:ignore="InefficientWeight,UnusedAttribute" />
        </LinearLayout>


        <TextView
            android:id="@+id/textShock"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:background="#fff"
            android:lines="5"
            android:text="@string/shock"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/textMaintainance"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:gravity="center"
            android:background="#fff"
            android:lines="5"
            android:text="@string/maintaince"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/textAlternative"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:gravity="center"
            android:background="#fff"
            android:lines="5"
            android:text="@string/oral_or_ngt"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="16sp" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            ads:adSize="BANNER"
            ads:adUnitId="@string/medical_ad"></com.google.android.gms.ads.AdView>

    </LinearLayout>


</RelativeLayout>
