<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:background="@color/finestWhite">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#FC9"
        android:gravity="center"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/paediatrics_protocols_kenya"
            android:textColor="#000"
            android:textSize="22sp" />

    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/header1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_below="@+id/header"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/tuberculosis"
            android:textColor="#000"
            android:textSize="12sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/tbn"
        android:layout_below="@+id/header1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        tools:ignore="ContentDescription" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/medical_ad">
    </com.google.android.gms.ads.AdView>

    <!--     <TextView -->
    <!--         android:id="@+id/textView1" -->
    <!--         android:layout_width="wrap_content" -->
    <!--         android:layout_height="wrap_content" -->
    <!--         android:layout_alignParentTop="true" -->
    <!--         android:layout_centerHorizontal="true" -->
    <!--         android:background="#7000" -->
    <!--         android:text="Press and Hold for more Options" -->
    <!--         android:textAppearance="?android:attr/textAppearanceMedium" /> -->

</RelativeLayout>
